[tool.poetry]
name = "yaml_config_override"
version = "0.6"
description = "Easy overriding of YAML configs"
authors = ["sashank_tirumala <stsashank6@gmail.com>"]
readme = "README.md"
packages = [{include = "yaml_config_override"}]

[tool.poetry.dependencies]
python = "^3.3"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
